Start with C-izm

--- a/Parsor/Parsor.fsproj
+++ b/Parsor/Parsor.fsproj
@@ -42,6 +42,7 @@
     <Compile Include="Primitives.fs" />
     <Compile Include="Tokenizor.fs" />
     <Compile Include="Expresion.fs" />
+    <Compile Include="Cizm.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
